@@ -287,6 +287,7 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
         Mac Director reuses OpenGL view in fullscreen mode
 		ccpLineIntersect: doesn't produce false positives for collisions. patch.
 		CGPointExtensions cleanup.
+		MenuToggleItem doesn't scale up if pressed several times. patch.
 	* marcofucci:
 		CCArray.fastRemoveObjectAtIndex patch.
 	* Marco Tillemans (araker):
